force-app/main/default/objects/ProjectServiceQuestion__c/ProjectServiceQuestion__c.object-meta.xml
<CustomObject>
    <description>Relates a Question to a Project Service. Questions from Service Question are added by default when a Service is added to a Project Service. Additional Questions can be added. Project Service Question is related to Project Service Question, Question, and Question Variant.</description>
    <label>Project Service Question</label>
    <nameField>
        <displayFormat>PSQ-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Service Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>