force-app/main/default/objects/ProjectServiceQuestion__c/fields/AILabel__c.field-meta.xml
<CustomField>
    <fullName>AILabel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AI Label</label>
    <referenceTo>AILabel__c</referenceTo>
    <relationshipLabel>Project Service Questions</relationshipLabel>
    <relationshipName>Project_Service_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>