force-app/main/default/objects/ProjectServiceQuestion__c/fields/DefinedResponseCount__c.field-meta.xml
<CustomField>
    <fullName>DefinedResponseCount__c</fullName>
    <label>DefinedResponseCount</label>
    <summaryFilterItems>
        <field>ProjectServiceQuestionDefinedResponse__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ProjectServiceQuestionDefinedResponse__c.ProjectServiceQuestion__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>