force-app/main/default/objects/ProjectServiceQuestion__c/fields/DefinedResponseLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>DefinedResponseLastModifiedDate__c</fullName>
    <label>DefinedResponse Last Modified Date</label>
    <summarizedField>ProjectServiceQuestionDefinedResponse__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>ProjectServiceQuestionDefinedResponse__c.ProjectServiceQuestion__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>