force-app/main/default/objects/ProjectServiceQuestion__c/fields/DefinedResponseLastModifiedDateForHT__c.field-meta.xml
<CustomField>
    <fullName>DefinedResponseLastModifiedDateForHT__c</fullName>
    <label>DefinedResponse LastModifiedDate For HT</label>
    <type>DateTime</type>
</CustomField>