force-app/main/default/objects/ProjectServiceQuestion__c/fields/IsItemQuestion__c.field-meta.xml
<CustomField>
    <fullName>IsItemQuestion__c</fullName>
    <formula>Question__r.ItemQuestion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Item Quesiton</label>
    <type>Checkbox</type>
</CustomField>