force-app/main/default/objects/ProjectServiceQuestion__c/fields/IsTargetQuestion__c.field-meta.xml
<CustomField>
    <fullName>IsTargetQuestion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Target Question</label>
    <type>Checkbox</type>
</CustomField>