force-app/main/default/objects/ProjectServiceQuestion__c/fields/IsVisibleToClient__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleToClient__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To hide a question from Supplier</description>
    <inlineHelpText>To hide a question from Supplier</inlineHelpText>
    <label>Is Visible to Client?</label>
    <type>Checkbox</type>
</CustomField>