force-app/main/default/objects/ProjectServiceQuestion__c/fields/JumpDefinedResponseCount__c.field-meta.xml
<CustomField>
    <fullName>JumpDefinedResponseCount__c</fullName>
    <label>Jump Defined Response Count</label>
    <summaryFilterItems>
        <field>ProjectServiceQuestionDefinedResponse__c.JumpToAction__c</field>
        <operation>equals</operation>
        <value>QUESTION</value>
    </summaryFilterItems>
    <summaryForeignKey>ProjectServiceQuestionDefinedResponse__c.ProjectServiceQuestion__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>