force-app/main/default/objects/ProjectServiceQuestion__c/fields/JumpToAction__c.field-meta.xml
<CustomField>
    <fullName>JumpToAction__c</fullName>
    <label>JumpTo Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUESTION</fullName>
            </value>
            <value>
                <fullName>CONTINUE</fullName>
            </value>
            <value>
                <fullName>RETURN</fullName>
            </value>
            <value>
                <fullName>BRANCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>