force-app/main/default/objects/ProjectServiceQuestion__c/fields/MinValue__c.field-meta.xml
<CustomField>
    <fullName>MinValue__c</fullName>
    <label>Min Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>