force-app/main/default/objects/ProjectServiceQuestion__c/fields/ParentProjectServiceQuestion__c.field-meta.xml
<CustomField>
    <fullName>ParentProjectServiceQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Project Service Question</description>
    <inlineHelpText>Parent Project Service Question</inlineHelpText>
    <label>Parent Project Service Question</label>
    <referenceTo>ProjectServiceQuestion__c</referenceTo>
    <relationshipLabel>Project Service Questions</relationshipLabel>
    <relationshipName>ParentProjectServiceQuestion</relationshipName>
    <type>Lookup</type>
</CustomField>