force-app/main/default/objects/ProjectServiceQuestion__c/fields/ProjectServiceName__c.field-meta.xml
<CustomField>
    <fullName>ProjectServiceName__c</fullName>
    <formula>ProjectService__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProjectServiceName</label>
    <type>Text</type>
</CustomField>