force-app/main/default/objects/ProjectServiceQuestion__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Question__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>ProjectServiceQuestions</relationshipLabel>
    <relationshipName>ProjectServiceQuestions</relationshipName>
    <type>Lookup</type>
</CustomField>