force-app/main/default/objects/ProjectServiceQuestion__c/fields/QuestionIndentationLevel__c.field-meta.xml
<CustomField>
    <fullName>QuestionIndentationLevel__c</fullName>
    <formula>LEN( QuestionIndentation__c )-LEN(SUBSTITUTE(QuestionIndentation__c 
, &#39;.&#39;, &#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Indentation Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>