force-app/main/default/objects/ProjectServiceQuestion__c/fields/QuestionNumberCalculated__c.field-meta.xml
<CustomField>
    <fullName>QuestionNumberCalculated__c</fullName>
    <formula>IF(UPPER(ProjectService__r.ServiceTemplateVersion__c) == &#39;V2&#39;, QuestionIndentation__c , TEXT( QuestionNumber__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Number Calculated</label>
    <type>Text</type>
</CustomField>