force-app/main/default/objects/ProjectServiceQuestion__c/fields/QuestionText__c.field-meta.xml
<CustomField>
    <fullName>QuestionText__c</fullName>
    <formula>Question__r.QuestionText__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Text</label>
    <type>Text</type>
</CustomField>