force-app/main/default/objects/ProjectServiceQuestion__c/fields/QuestionType__c.field-meta.xml
<CustomField>
    <fullName>QuestionType__c</fullName>
    <formula>TEXT(Question__r.QuestionType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Type</label>
    <type>Text</type>
</CustomField>