force-app/main/default/objects/ProjectServiceQuestion__c/fields/QuestionVariant__c.field-meta.xml
<CustomField>
    <fullName>QuestionVariant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Variant</label>
    <referenceTo>QuestionVariant__c</referenceTo>
    <relationshipLabel>Project Service Questions</relationshipLabel>
    <relationshipName>Project_Service_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>