force-app/main/default/objects/ProjectServiceQuestion__c/fields/QuestionVariantText__c.field-meta.xml
<CustomField>
    <fullName>QuestionVariantText__c</fullName>
    <formula>IF(OR(ISNULL(QuestionVariant__c),QuestionVariant__c = &#39;&#39;), Question__r.QuestionText__c,  QuestionVariant__r.QuestionText__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Variant Text</label>
    <type>Text</type>
</CustomField>