force-app/main/default/objects/ProjectServiceQuestion__c/fields/ResponseAverage__c.field-meta.xml
<CustomField>
    <fullName>ResponseAverage__c</fullName>
    <label>Response Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>