force-app/main/default/objects/ProjectServiceQuestion__c/fields/ResponseSum__c.field-meta.xml
<CustomField>
    <fullName>ResponseSum__c</fullName>
    <label>Response Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>