force-app/main/default/objects/ProjectServiceQuestion__c/fields/ServiceId__c.field-meta.xml
<CustomField>
    <fullName>ServiceId__c</fullName>
    <formula>ProjectService__r.Service__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service ID</label>
    <type>Text</type>
</CustomField>