force-app/main/default/objects/ProjectServiceQuestion__c/fields/ServiceQuestion__c.field-meta.xml
<CustomField>
    <fullName>ServiceQuestion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Question</label>
    <type>Checkbox</type>
</CustomField>