force-app/main/default/objects/ProjectServiceQuestion__c/validationRules/MinMaxValue_BothOrNeither.validationRule-meta.xml
<ValidationRule>
    <fullName>MinMaxValue_BothOrNeither</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(ISBLANK(MinValue__c),NOT(ISBLANK(MaxValue__c))),AND(NOT(ISBLANK(MinValue__c)),ISBLANK(MaxValue__c)))</errorConditionFormula>
    <errorMessage>Both min / max value should be added or neither of them should have a value.</errorMessage>
</ValidationRule>