force-app/main/default/objects/ProjectServiceQuestion__c/validationRules/validateOneActiveResponse.validationRule-meta.xml
<ValidationRule>
    <fullName>validateOneActiveResponse</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( NOT(ISNEW()), 
					DefinedResponseCount__c &lt; 2,  
					NOT(ISPICKVAL(ProjectService__r.Project__r.CloneStatus__c,&#39;Started&#39;)),
					OR(QuestionType__c == &#39;Single-Select List&#39;,QuestionType__c ==&#39;Multi-Select List&#39; ))</errorConditionFormula>
    <errorMessage>There should be at least two active Defined Responses for this question.</errorMessage>
</ValidationRule>